Resolvendo navbar mobile projects z-index

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -103,6 +103,7 @@
     right: -100%;
     height: 100vh;
     width: 100%;
+     z-index: 2;
     transition: 0.3s ease-in-out;
 }
 
